@@ -1,3 +1,11 @@
+2003-10-12  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* dae/oprofiled.c: don't set cpu_number when !--separate=cpu
+	
+	* libop/tests/alloc_counter_tests.c: printf format for 64 bits arch
+	* libop/tests/cpu_type_tests.c: #include <string.h>
+	* libop/tests/parse_event_tests.c: #include <string.h>
+
 2003-10-11  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* libop/op_interface.h: struct op_sample: remove packed attribute
